--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     { "src": "app.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/main.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
