--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "main.html", "use": "@vercel/static" },
+    { "src": "index.html", "use": "@vercel/static" },
     { "src": "app.js", "use": "@vercel/node" }
   ],
   "routes": [
