--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
   "version": 2,
   "builds": [
     { "src": "index.html", "use": "@vercel/static" },
-    { "src": "page1.html", "use": "@vercel/static" },
-    { "src": "page2.html", "use": "@vercel/static" },
-    { "src": "page3.html", "use": "@vercel/static" },
     { "src": "app.js", "use": "@vercel/static" },
     { "src": "css7.css", "use": "@vercel/static" },
-    { "src": "images/(.*)", "use": "@vercel/static" }
+    { "src": "images/**/*", "use": "@vercel/static" },
+    { "src": "page1.html", "use": "@vercel/static" },
+    { "src": "page2.html", "use": "@vercel/static" },
+    { "src": "page3.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/page1.html", "dest": "/page1.html" },
-    { "src": "/page2.html", "dest": "/page2.html" },
-    { "src": "/page3.html", "dest": "/page3.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
